--- a/PowerPlant/Base.lproj/Main.storyboard
+++ b/PowerPlant/Base.lproj/Main.storyboard
@@ -115,7 +115,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Clc-Uw-IiU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1404" y="118"/>
+            <point key="canvasLocation" x="1404" y="117.39130434782609"/>
         </scene>
         <!--Dashboard-->
         <scene sceneID="cqg-0j-0eP">
@@ -152,15 +152,15 @@
                                 <rect key="frame" x="24" y="479" width="297" height="2"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </progressView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Last Watered" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lY6-cy-CKi">
-                                <rect key="frame" x="24" y="511" width="241" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Last Watered:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lY6-cy-CKi">
+                                <rect key="frame" x="24" y="517" width="241" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="DEFAULT-DATE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xjR-mU-ycy">
-                                <rect key="frame" x="24" y="594" width="274" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DEFAULT-DATE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xjR-mU-ycy">
+                                <rect key="frame" x="30" y="562" width="295" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -175,10 +175,12 @@
                         </subviews>
                         <color key="backgroundColor" red="0.59999999999999998" green="0.80000000000000004" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstItem="xjR-mU-ycy" firstAttribute="leading" secondItem="rlS-tO-zMg" secondAttribute="leading" constant="30" id="2OP-Ph-vhk"/>
                             <constraint firstItem="g8U-MX-2Fp" firstAttribute="bottom" secondItem="rlS-tO-zMg" secondAttribute="bottom" id="Gco-Ju-sVV"/>
+                            <constraint firstItem="rlS-tO-zMg" firstAttribute="trailing" secondItem="xjR-mU-ycy" secondAttribute="trailing" constant="50" id="g8I-ch-5nf"/>
                             <constraint firstItem="rlS-tO-zMg" firstAttribute="trailing" secondItem="g8U-MX-2Fp" secondAttribute="trailing" constant="161" id="hoO-en-Fih"/>
                             <constraint firstItem="g8U-MX-2Fp" firstAttribute="leading" secondItem="rlS-tO-zMg" secondAttribute="leading" constant="161" id="wWV-yA-T4h"/>
-                            <constraint firstItem="g8U-MX-2Fp" firstAttribute="top" secondItem="xjR-mU-ycy" secondAttribute="bottom" constant="22" id="yVr-jL-gZX"/>
+                            <constraint firstItem="g8U-MX-2Fp" firstAttribute="top" secondItem="xjR-mU-ycy" secondAttribute="bottom" constant="54" id="yVr-jL-gZX"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="rlS-tO-zMg"/>
                     </view>
@@ -202,8 +204,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="9Ca-FY-f47">
-                                <rect key="frame" x="0.0" y="114" width="110" height="61.5"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" alignment="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="9Ca-FY-f47">
+                                <rect key="frame" x="0.0" y="98" width="110" height="61.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Type: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LV8-6V-AZp">
                                         <rect key="frame" x="63" y="0.0" width="47" height="20.5"/>
@@ -229,16 +231,16 @@
                                 </constraints>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="tips" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dRl-j7-u43">
-                                <rect key="frame" x="0.0" y="212" width="375" height="165"/>
+                                <rect key="frame" x="0.0" y="225" width="375" height="139"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="165" id="PJA-Gg-438"/>
+                                    <constraint firstAttribute="height" constant="139" id="PJA-Gg-438"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="WDz-ss-CL3">
-                                <rect key="frame" x="115" y="114" width="106.5" height="61.5"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="WDz-ss-CL3">
+                                <rect key="frame" x="115" y="98" width="106.5" height="61.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PlantType" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4R0-hL-rtF">
                                         <rect key="frame" x="0.0" y="0.0" width="75.5" height="20.5"/>
@@ -260,18 +262,8 @@
                                     </label>
                                 </subviews>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Details" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wHw-IE-nGT">
-                                <rect key="frame" x="0.0" y="375" width="375" height="26"/>
-                                <color key="backgroundColor" red="0.72595524290000002" green="0.82282221499999997" blue="0.79359577199999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="26" id="d7D-Az-SQy"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Details" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KNx-If-fKZ">
-                                <rect key="frame" x="0.0" y="399" width="375" height="185"/>
+                                <rect key="frame" x="0.0" y="419" width="375" height="165"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -293,18 +285,27 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Details" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wHw-IE-nGT">
+                                <rect key="frame" x="0.0" y="380" width="375" height="26"/>
+                                <color key="backgroundColor" red="0.72595524290000002" green="0.82282221499999997" blue="0.79359577199999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="26" id="d7D-Az-SQy"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.59999999999999998" green="0.80000000000000004" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="dRl-j7-u43" firstAttribute="leading" secondItem="U4z-E4-b4b" secondAttribute="leading" id="3Qw-Gt-xYA"/>
                             <constraint firstItem="WDz-ss-CL3" firstAttribute="leading" secondItem="9Ca-FY-f47" secondAttribute="trailing" constant="5" id="5tG-5I-5yU"/>
-                            <constraint firstItem="wHw-IE-nGT" firstAttribute="top" secondItem="dRl-j7-u43" secondAttribute="bottom" constant="-2" id="Jsy-no-PEF"/>
-                            <constraint firstItem="wHw-IE-nGT" firstAttribute="top" secondItem="dRl-j7-u43" secondAttribute="bottom" constant="-2" id="Jv9-f4-sb4"/>
+                            <constraint firstItem="wHw-IE-nGT" firstAttribute="top" secondItem="dRl-j7-u43" secondAttribute="bottom" constant="16" id="Jv9-f4-sb4"/>
                             <constraint firstItem="WDz-ss-CL3" firstAttribute="top" secondItem="U4z-E4-b4b" secondAttribute="top" constant="50" id="Kwn-4Y-F2q"/>
                             <constraint firstItem="dRl-j7-u43" firstAttribute="trailing" secondItem="U4z-E4-b4b" secondAttribute="trailing" id="M4D-DB-k5L"/>
                             <constraint firstItem="KNx-If-fKZ" firstAttribute="leading" secondItem="U4z-E4-b4b" secondAttribute="leading" id="MlC-w4-ESi"/>
                             <constraint firstItem="dRl-j7-u43" firstAttribute="leading" secondItem="U4z-E4-b4b" secondAttribute="leading" id="Pll-jP-V6l"/>
-                            <constraint firstItem="KNx-If-fKZ" firstAttribute="top" secondItem="wHw-IE-nGT" secondAttribute="bottom" constant="-2" id="Teq-8S-apd"/>
+                            <constraint firstItem="KNx-If-fKZ" firstAttribute="top" secondItem="wHw-IE-nGT" secondAttribute="bottom" constant="13" id="Teq-8S-apd"/>
                             <constraint firstItem="9Ca-FY-f47" firstAttribute="top" secondItem="U4z-E4-b4b" secondAttribute="top" constant="50" id="Zn9-nv-x2e"/>
                             <constraint firstItem="yA7-iL-HxC" firstAttribute="top" secondItem="KNx-If-fKZ" secondAttribute="bottom" constant="14" id="a89-QT-WQm"/>
                             <constraint firstItem="wHw-IE-nGT" firstAttribute="leading" secondItem="MVc-Rx-pBr" secondAttribute="leading" id="gHr-XM-Zw6"/>
@@ -318,7 +319,7 @@
                             <constraint firstItem="U4z-E4-b4b" firstAttribute="trailing" secondItem="yA7-iL-HxC" secondAttribute="trailing" constant="131" id="qGd-Xg-zrH"/>
                             <constraint firstItem="Asp-6i-je8" firstAttribute="leading" secondItem="U4z-E4-b4b" secondAttribute="leading" id="qU1-0k-Mry"/>
                             <constraint firstItem="WDz-ss-CL3" firstAttribute="top" secondItem="9Ca-FY-f47" secondAttribute="bottom" constant="-61.5" id="qZO-Lg-Cik"/>
-                            <constraint firstItem="dRl-j7-u43" firstAttribute="top" secondItem="Asp-6i-je8" secondAttribute="bottom" constant="0.5" id="qz0-Vx-1RR"/>
+                            <constraint firstItem="dRl-j7-u43" firstAttribute="top" secondItem="Asp-6i-je8" secondAttribute="bottom" constant="13.5" id="qz0-Vx-1RR"/>
                             <constraint firstItem="Asp-6i-je8" firstAttribute="top" secondItem="9Ca-FY-f47" secondAttribute="bottom" constant="15.5" id="rUK-a5-7JB"/>
                             <constraint firstItem="U4z-E4-b4b" firstAttribute="trailing" secondItem="dRl-j7-u43" secondAttribute="trailing" id="wXd-28-KmO"/>
                             <constraint firstItem="KNx-If-fKZ" firstAttribute="trailing" secondItem="U4z-E4-b4b" secondAttribute="trailing" id="wjA-Lv-ajz"/>
@@ -335,7 +336,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NAP-2i-l2e" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2180" y="116.49175412293854"/>
+            <point key="canvasLocation" x="2179.5" y="115.5"/>
         </scene>
         <!--Plants-->
         <scene sceneID="OYN-nT-qWV">
